--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -15,5 +15,5 @@ $fontSize: clamp(14px , 2.5vw , 18px);
 /* COLORS VARIABLES */
 $mainColor: #EAA121; // main site color
 $secColor: #F3F7FC; // secondary site color
-$textColor: #1F2327; // main text color
+// $textColor: #1F2327; // main text color
 $btnColor:#4C637F;
